fix(video): #31115, Spinner not centered

--- a/css/_modules.scss
+++ b/css/_modules.scss
@@ -1696,6 +1696,10 @@ recorder {
             i{
                 color:$orange;
             }
+            i.loading{
+                height: 18px !important;
+                line-height: 18px;
+            }
 		}
 	}
 }
